[package]
name = "arbor"
version = "0.1.0"
edition = "2021"
authors = ["RoyAalekh"]
description = "A command-line tool for generating and exporting directory tree structures with size information"
license = "MIT"
repository = "https://github.com/RoyAalekh/arbor"
keywords = ["arbor", "cli", "directory", "tree", "visualization", "export"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
readme = "README.md"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
walkdir = "2.3"
ansi_term = "0.12"
image = "0.24"
imageproc = "0.23"
rusttype = "0.9"

[dev-dependencies]
tempfile = "3.8"
regex = "1.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true